2012-04-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties): Let-bind
	`print-length' and `print-level' to nil, in order to avoid
	truncation.  Reported by Christopher Schmidt
	<christopher@ristopher.com>.

2012-04-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-send-command): Apply
	`tramp-compat-call-process' instead of `tramp-local-call-process'.
	Reported by Magnus Henoch <magnus.henoch@gmail.com>.

2012-04-01  Chong Yidong  <cyd@gnu.org>

	* tramp.el (tramp-file-name-for-operation): Rename
	file-subdir-of-p to file-in-directory-p.

2012-03-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message-show-progress-reporter-message): New defvar.
	(tramp-with-progress-reporter): Use it.  We cannot use
	`tramp-message-show-message' here, because this suppresses also
	error buffers.

2012-03-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-copy-directory): Fix error in
	condition-case syntax.

2012-03-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-shell-prompt-pattern): Allow "[]" style prompts.
	(Bug#11065)

2012-03-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Use
	progress-reporter for the whole scenario.

2012-03-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-process-environment): Add "PAGER=\"\"".
	Reported by Robert Lupton the Good <rhl@astro.princeton.edu>.

2012-02-28  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

        * tramp.el (tramp-file-name-for-operation): Rename `files-equal-p'
	to `file-equal-p'.

2012-02-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-inodes, tramp-devices): Initialize with 0.
	(tramp-get-inode, tramp-get-device): Use cached values.

2012-02-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation): Add `files-equal-p'
	and `file-subdir-of-p'.
